# todb

./: .gitignore  AGENTS.md  Cargo.toml  build.sh
bootstrap/: system_tables.yaml
config/: default.yaml
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs
crates/memory/: Cargo.toml
crates/memory/src/: allocator.rs  context.rs  lib.rs
crates/observability/: Cargo.toml
crates/observability/src/: init.rs  lib.rs  metrics.rs  trace.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: interceptor.rs  lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs  runtime.rs
crates/sql/: Cargo.toml
crates/sql/src/: lib.rs
crates/sql/src/catalog/: mod.rs
crates/sql/src/udf/: mod.rs  version.rs
crates/sql/tests/: system_catalog.rs  version_udf.rs
crates/storage/: Cargo.toml
crates/storage/benches/: skipmap_iter.rs
crates/storage/src/: block.rs  disk_manager.rs  engine.rs  errors.rs  flush_scheduler.rs  flush_worker.rs  iter.rs  key.rs  lib.rs  log_service.rs  lsm_engine.rs  lsm_iter.rs  lsm_state.rs  lsm_store.rs  memtable.rs  meta_manager.rs  row_data.rs  row_key.rs  storage_layer.rs  testing.rs  wal.rs  write_batch.rs
crates/storage/src/builder/: data_block.rs  index_block.rs  mod.rs  sst.rs  sst_writer.rs
crates/storage/src/iterators/: block_iter.rs  concat_iter.rs  data_entry_decode_iter.rs  entry_decode_iter.rs  index_entry_decode_iter.rs  index_tree_iter.rs  iter.rs  map_iter.rs  merge_iter.rs  mod.rs  scan_iter.rs  sst_iter.rs  storage_iter.rs  two_merge_iter.rs
crates/storage/src/tests/: concat_iter_tests.rs  helpers.rs  merge_iter_tests.rs  mod.rs  reverse_iter_tests.rs  sst_iter_tests.rs  two_merge_iter_tests.rs  wal_index_write.rs
crates/storage/src/wal/: aligned.rs  buffer.rs  config.rs  disk.rs  error.rs  facade.rs  file_wal_store.rs  frame.rs  impl.rs  index.rs  index_reader.rs  iter.rs  lsn.rs  mod.rs  odirect_writer.rs  record.rs  segment.rs  serialize.rs  store.rs
crates/storage/tests/: disk_manager_tests.rs  error_tests.rs  storage_layer_tests.rs  wal_tests.rs
crates/storage/tests/wal_v2/: wal_read_primitives.rs  wal_write_path.rs
docs/: INITIALIZATION-COMPLETE.md  index.md
docs/analysis/: wal-design-tradeoffs.md
docs/architecture/: README.md  api-response-conventions.md  integration-and-transaction-patterns.md  module-boundaries.md  project-vision.md  system-baseline.md  wal-design.md  wal-index-design.md
docs/backlog/: 00-roadmap-authoring-guide.md  README.md  implementation-roadmap.md
docs/bugs/: 2026-06-27-sst-deep-tree-traversal.md
docs/context/: README.md  ai-autonomy-policy.md  codebase-map.md  conventions.md  project-context.md  source-of-truth-and-precedence.md
docs/design/: README.md  app-overview.md  domain-design-guidelines.md  feature-inventory.md  flow-overview.md  roles-and-permissions.md  storage-engine-design.md
docs/discussions/: README.md
docs/input/: 00-input-processing-guide.md  README.md
docs/logs/: 00-log-writing-guide.md
docs/logs/2026/: 06-27-wal-migration.md  06-27.md  06-28.md
docs/plans/: 2026-06-27-migrate-wal-from-demo.md  2026-06-27-unify-block-io-gat.md  2026-06-27-wal-index-read-path.md  2026-06-29-wal-segment-manager.md
docs/process/: README.md  application-development-workflow.md
docs/requirements/: 00-requirement-synthesis-guide.md  README.md  mvp.md  product-baseline.md  product-scope.md  wal-core-v2.md
docs/superpowers/specs/: 2026-05-18-memtable-design.md
docs/testing/: known-good-baselines.md
server/: Cargo.toml  build.rs
server/src/: catalog.rs  catalog_provider.rs  client_session.rs  config.rs  engine.rs  error.rs  executor.rs  http.rs  lib.rs  main.rs  pgwire.rs  provider.rs  query.rs  schema_provider.rs  store.rs  version.rs
server/tests/: catalog_store.rs  executor_flow.rs  provider.rs  query_version.rs  schema_provider.rs
