[package]
name = "server"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sql = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
datafusion = { workspace = true }

[build-dependencies]
chrono = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
