[package]
name = "server"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
datafusion = { workspace = true }
pgwire = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sql = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
chrono = { workspace = true }
