[package]
name = "server"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
bytes = { workspace = true }
chrono = { workspace = true }
datafusion = { workspace = true }
futures = "0.3"
pgwire = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sql = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
chrono = { workspace = true }
