[package]
name = "rpc"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
observability = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
