[package]
name = "storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
crossbeam-skiplist = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
ouroboros = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "skipmap_iter"
harness = false
