[package]
name = "storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
crossbeam-skiplist = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
ouroboros = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
crc32c = "0.6"

# WAL v2 dependencies
arc-swap = "1"
crc32fast = "1"
libc = "0.2"
nix = { version = "0.29", features = ["fs"] }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "skipmap_iter"
harness = false
